--- a/k8s-yaml/prometheus/040_serviceMonitor.yaml
+++ b/k8s-yaml/prometheus/040_serviceMonitor.yaml
@@ -1,6 +1,7 @@
 apiVersion: monitoring.coreos.com/v1
 kind: ServiceMonitor
 metadata:
+  namespace: wildfly-ex-app
   name: sm-wildfly 
 spec:
   selector:
